src/styles/style.css
body {
  /* line-height: 2rem; */
  font-size: 18px;
  font-kerning: normal;
  line-height: 2;
  font-feature-settings: 'kern', 'liga', 'clig', 'calt';
}

blockquote {
  font-style: italic;
  font-weight: 400;
  /* filter: brightness(95%); */
  /* color: var(--ja-grey-light); */
}

pre {
  border-radius: 3px;
  overflow: auto;
  overflow-wrap: normal;
}

img {
  width: 100%;
  border-radius: 3px;
}

